...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/postRecipeFragment"
    tools:context=".fragments.PostRecipeFragment">

...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:labelFor="@+id/nameInput"/>

            <EditText
...

                <Button
                    android:id="@+id/buttonAddIngre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/instruction0"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
...

                <Button
                    android:id="@+id/buttonAddInstr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                        android:text="@string/EnterPersonNb"
                        android:textSize="15sp"
                        android:labelFor="@+id/personNbInput"/>

                    <EditText
...
                        android:text="@string/EnterPrepTime"
                        android:textSize="15sp"
                        android:labelFor="@+id/prepTimeInput"/>

                    <EditText
...
                        android:text="@string/EnterCookTime"
                        android:textSize="15sp"
                        android:labelFor="@+id/cookTimeInput"/>

                    <EditText
...
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/difficultyInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...

                    <Button
                        android:id="@+id/miniature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/miniaturePreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/pictures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/postRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/errorLogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
